--- a/entry/src/main/module.json5
+++ b/entry/src/main/module.json5
@@ -17,6 +17,9 @@
         "name": "ohos.permission.INTERNET",
       },
       {
+        "name": "ohos.permission.VIBRATE"
+      },
+      {
         "name": "ohos.permission.LOCATION",
         "reason": "$string:location_permission_reason",
         "usedScene": {
